feat: T-D2 stock commit/restore publish AFTER_COMMIT 리스너로 분리 + TX timeout 5s
[신설]
- StockCommitRequestedEvent / StockRestoreRequestedEvent record 2종
  (payment.application.event 패키지) — TX 내 ApplicationEvent 발행 전용
- StockEventPublishingListener (@Component, @TransactionalEventListener AFTER_COMMIT):
  - onStockCommitRequested → stockCommitEventPublisherPort.publish
  - onStockRestoreRequested → stockRestoreEventPublisherPort.publishPayload
  - Kafka 발행 실패 시 LogFmt.error 후 예외 삼킴(TX 이미 commit, ADR-04)

[변경]
- PaymentConfirmResultUseCase:
  - 생성자 3번째 인자 StockCommitEventPublisherPort → ApplicationEventPublisher
  - handleApproved: 직접 stockCommitEventPublisherPort.publish 제거
    → applicationEventPublisher.publishEvent(StockCommitRequestedEvent) 루프 교체
  - @Transactional → @Transactional(timeout=5) — DB TX 최대 5초 제한

[테스트 보정]
- ConfirmedEventConsumerTest / PaymentConfirmResultUseCaseTest /
  PaymentConfirmResultUseCaseTwoPhaseLeaseTest:
  FakeStockCommitEventPublisher 제거 → CapturingApplicationEventPublisher 내부 클래스로 교체
- 신규: PaymentConfirmResultUseCaseD2Test 2케이스
  + StockEventPublishingListenerTest 3케이스(swallow 포함)

전수 314/314(payment-service) PASS, 회귀 없음. T-E1 진입 가능.